--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Haydar Hamieh",
   "license": "MIT",
   "dependencies": {
+    "downloads-folder": "^3.0.3",
     "electron-squirrel-startup": "^1.0.0",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
